# AoC-2021

./: CMakeLists.txt  README.md  build.sh
Day1/: CMakeLists.txt  main.cpp
Day10/: main.cpp
Day11/: main.cpp
Day12/: main.cpp
Day13/: main.cpp
Day14/: main.cpp
Day15/: main.cpp
Day16/: main.cpp
Day17/: main.cpp
Day18/: main.cpp
Day19/: main.cpp
Day2/: main.cpp
Day20/: main.cpp
Day21/: main.cpp
Day22/: main.cpp
Day23/: main.cpp
Day24/: main.cpp
Day25/: main.cpp
Day3/: main.cpp
Day4/: CMakeLists.txt  main.cpp
Day5/: main.cpp
Day6/: main.cpp
Day7/: main.cpp
Day8/: main.cpp
Day9/: main.cpp
aoc21/: helpers.h
inputs/: Day16Sample.txt  Day24Sample.txt
template/: main.cpp
